Fixed alignment of body and container to centre. Added background colours to grid, webpage and text.

--- a/index.css
+++ b/index.css
@@ -1,29 +1,49 @@
 body
 {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
     margin-top: 50px;
     margin-bottom: 100px;
-    margin-left: 100px;
-    margin-right: 100px;
+    background-color: beige;
 }
 
 #container
 {
     display: grid;
-    max-width: 460px;
-    max-height: 460px;
+    max-width: 960px;
+    max-height: 960px;
+    background-color: aliceblue;
 }
-
 
 #gridRow, #gridCells
 {
     display: grid;
-    justify-content: center;
-    align-items: center;
-    border: 0.1px solid grey;
+    border: 0.1px solid rgb(240, 237, 237);
     width: 100%;
     height: 0;
     padding-top: 100%;
     min-height: 2px;
     min-width: 2px;
     gap: 0;
+}
+
+#newGrid
+{
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    font-size: large;
+    color: cadetblue;
+    margin-bottom: 40px;
+}
+
+button
+{
+    background-color: beige;
+}
+
+#submit
+{
+    font-size: medium;
 }
